Corrected ally tokens. New colors, spacing and radii.

--- a/design-tokens/tokens.scss
+++ b/design-tokens/tokens.scss
@@ -1,109 +1,110 @@
 
 /* colors */
-$ally-dark-red: #c22d13;
-$black: #000000;
-$dark-gray: #333333;
-$medium-gray: #888888;
-$light-gray: #cccccc;
-$white: #ffffff;
-$ally-forest-green: #2d912f;
-$ally-lime-green: #3ade3c;
-$ally-teal-blue: #2d8491;
-$ally-surf-cyan: #000000;
+$ally-color-black: #000000;
+$ally-color-gray-dark: #333333;
+$ally-color-gray-medium: #595959;
+$ally-color-gray-light: #cccccc;
+$ally-color-white: #ffffff;
+$ally-color-red: #d1452c;
+$ally-color-green: #7ab226;
+$ally-color-blue: #1551c3;
 
-/* Shadows */
-$card-shadow: 0px 4px 4px 0px #00000040;
+/* BorderRadiuses */
+$ally-radius-1-x: 4px;
+$ally-radius-2-x: 8px;
+$ally-radius-round: 99px;
+$ally-radius-4-x: 16px;
 
 /* fonts */
-$primary-font: Red Hat Text;
-$secondary-font: Red Hat Text;
-$figtree-500: Figtree;
+$ally-font-primary-bold: Atkinson Hyperlegible;
+$ally-font-primary-regular: Atkinson Hyperlegible;
 /* text styles*/
-@mixin h-1() {
-  fontFamily : $secondary-font;
-  fontSize : 96px;
-  lineHeight: 112px;
-  letterSpacing : -1.5px;
-}
-@mixin h-2() {
-  fontFamily : $secondary-font;
-  fontSize : 60px;
-  lineHeight: 71px;
-  letterSpacing : -0.5px;
-}
-@mixin body-1() {
-  fontFamily : $figtree-500;
-  fontSize : 16px;
-  lineHeight: 28px;
-  letterSpacing : 0.4399999976158142px;
-}
-@mixin body-2-menu() {
-  fontFamily : $figtree-500;
-  fontSize : 14px;
-  lineHeight: 20px;
-  letterSpacing : 0.25px;
-}
-@mixin subtitle-1() {
-  fontFamily : $figtree-500;
-  fontSize : 16px;
-  lineHeight: 24px;
-  letterSpacing : 0.15000000596046448px;
-}
-@mixin subtitle-2() {
-  fontFamily : $figtree-500;
-  fontSize : 14px;
-  lineHeight: 24px;
-  letterSpacing : 0.0010000000149011613em;
-}
-@mixin button() {
-  fontFamily : $secondary-font;
-  fontSize : 14px;
-  lineHeight: 16px;
-  letterSpacing : 1px;
-}
-@mixin caption() {
-  fontFamily : $primary-font;
-  fontSize : 12px;
-  lineHeight: 16px;
-  letterSpacing : 0.4000000059604645px;
-}
-@mixin overline() {
-  fontFamily : $primary-font;
-  fontSize : 10px;
-  lineHeight: 16px;
-  letterSpacing : 1.5px;
-}
-@mixin h-3() {
-  fontFamily : $secondary-font;
+@mixin ally-text-h-1() {
+  fontFamily : $ally-font-primary-bold;
   fontSize : 48px;
-  lineHeight: 57px;
+  lineHeight: 56px;
   letterSpacing : 0em;
 }
-@mixin h-4() {
-  fontFamily : $secondary-font;
-  fontSize : 34px;
-  lineHeight: 40px;
-  letterSpacing : 0.25px;
+@mixin ally-text-h-2() {
+  fontFamily : $ally-font-primary-bold;
+  fontSize : 32px;
+  lineHeight: 39px;
+  letterSpacing : 0em;
 }
-@mixin h-5() {
-  fontFamily : $secondary-font;
+@mixin ally-text-h-3() {
+  fontFamily : $ally-font-primary-regular;
+  fontSize : 30px;
+  lineHeight: 32px;
+  letterSpacing : 0em;
+}
+@mixin ally-text-h-4() {
+  fontFamily : $ally-font-primary-bold;
   fontSize : 24px;
-  lineHeight: 28px;
+  lineHeight: 30px;
   letterSpacing : 0em;
 }
-@mixin h-6() {
-  fontFamily : $secondary-font;
+@mixin ally-text-h-5() {
+  fontFamily : $ally-font-primary-regular;
+  fontSize : 24px;
+  lineHeight: 30px;
+  letterSpacing : 0em;
+}
+@mixin ally-text-h-6() {
+  fontFamily : $ally-font-primary-bold;
   fontSize : 20px;
   lineHeight: 26px;
-  letterSpacing : 0.15000000596046448px;
+  letterSpacing : 0em;
+}
+@mixin ally-text-body-regular() {
+  fontFamily : $ally-font-primary-regular;
+  fontSize : 16px;
+  lineHeight: 24px;
+  letterSpacing : 0em;
+}
+@mixin ally-text-body-large() {
+  fontFamily : $ally-font-primary-regular;
+  fontSize : 20px;
+  lineHeight: 28px;
+  letterSpacing : 0em;
+}
+@mixin ally-text-subtitle() {
+  fontFamily : $ally-font-primary-bold;
+  fontSize : 16px;
+  lineHeight: 22px;
+  letterSpacing : 0em;
+}
+@mixin ally-text-button() {
+  fontFamily : $ally-font-primary-bold;
+  fontSize : 16px;
+  lineHeight: 24px;
+  letterSpacing : 0em;
+}
+@mixin ally-text-link() {
+  fontFamily : $ally-font-primary-regular;
+  fontSize : 16px;
+  lineHeight: 22px;
+  letterSpacing : 0em;
+}
+@mixin ally-text-album-title() {
+  fontFamily : $ally-font-primary-bold;
+  fontSize : 14px;
+  lineHeight: 16px;
+  letterSpacing : 0em;
+}
+@mixin ally-text-album-artist() {
+  fontFamily : $ally-font-primary-regular;
+  fontSize : 14px;
+  lineHeight: 16px;
+  letterSpacing : 0em;
 }
 
 /* SpacePatterns */
-$none: 0px;
-$xx-small: 2px;
-$x-small: 4px;
-$small: 8px;
-$regular: 16px;
-$large: 32px;
-$x-large: 64px;
-$xx-large: 128px;
+$0-x: 0px;
+$0-25-x: 1px;
+$0-5-x: 2px;
+$1-x: 4px;
+$2-x: 8px;
+$3-x: 12px;
+$5-x: 20px;
+$4-x: 16px;
+$10-x: 40px;
